--- a/index.html
+++ b/index.html
@@ -18,8 +18,44 @@
                 <li><a href="#">Contato</a></li>
               </ul>
             </nav>
-            <h1 class="site-title">Alysson Alves</h1>
-            <h2 class="site-subtitle">Develop web Jr.</h2>
-          </header>
+            <div>
+              <img src="../aula1/img/perfil.jpg" alt="Foto de perfil" id="perfil">
+              <h1 class="site-title">Alysson Alves</h1>
+              <h2 class="site-subtitle">Especialista em Adm. e Segurança</h2>
+            </div>
+
+        </header>
+        <main>
+          <article>
+            <h2>Sobre</h2>
+            <p>Sou o Alysson dos Santos Alves, tenho 24 anos e sou Graduado em Redes de computadores(2014-2017) com Especialização em Administração e Segurança de Servidores(2018-2020). Sempre procurando novas tecnologias e conhecimento, nesse momento com o foco no mundo de desenvolvimento</p>
+            <p></p>
+          </article>
+          <section>
+            <h2>Portfólio</h2>
+            <figure>
+              <img class="img-portfolio" src="./img/consultor.jpg" alt="Imagem de Consultor">
+              <figcaption>Consultor</figcaption>
+            </figure>
+            <figure>
+              <img class="img-portfolio" src="./img/infra.png" alt="Imagem de Infraestrutura">
+              <figcaption>Infraestrutura</figcaption>
+            </figure>
+            <figure>
+              <img class="img-portfolio" src="./img/servidores.png" alt="Imagem de Gerenciamento de Servidores">
+              <figcaption>Gerenciamento de Servidores</figcaption>
+            </figure>
+            <figure>
+              <img class="img-portfolio" src="./img/programador.png" alt="Imagem de Desenvolvedor">
+              <figcaption>Desenvolvedor(Em breve)</figcaption>
+            </figure>
+          </section>
+        </main>
+        <footer>
+
+        </footer>
+
+        <!-- script java -->
+        <script src="../aula1/script/script.js"></script>
     </body>
 </html>
