mudar link de imagem

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               </ul>
             </nav>
             <div>
-              <img src="../aula1/img/perfil.jpg" alt="Foto de perfil" id="perfil">
+              <img src="./img/perfil.jpg" alt="Foto de perfil" id="perfil">
               <h1 class="site-title">Alysson Alves</h1>
               <h2 class="site-subtitle">Especialista em Adm. e Segurança</h2>
             </div>
