--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Aula 01</title>
+        <title>Portfólio</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -13,9 +13,9 @@
         <header>
             <nav class="menu">
               <ul>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Portfólio</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#Sobre">Sobre</a></li>
+                <li><a href="#Portfolio">Portfólio</a></li>
+                <li><a href="#Contato">Contato</a></li>
               </ul>
             </nav>
             <div>
@@ -26,32 +26,41 @@
 
         </header>
         <main>
-          <article>
-            <h2>Sobre</h2>
+          <article >
+            <h2><a name="Sobre">Sobre</a></h2>
             <p>Sou o Alysson dos Santos Alves, tenho 24 anos e sou Graduado em Redes de computadores(2014-2017) com Especialização em Administração e Segurança de Servidores(2018-2020). Sempre procurando novas tecnologias e conhecimento, nesse momento com o foco no mundo de desenvolvimento</p>
-            <p></p>
           </article>
           <section>
-            <h2>Portfólio</h2>
-            <figure>
-              <img class="img-portfolio" src="./img/consultor.jpg" alt="Imagem de Consultor">
-              <figcaption>Consultor</figcaption>
-            </figure>
-            <figure>
-              <img class="img-portfolio" src="./img/infra.png" alt="Imagem de Infraestrutura">
-              <figcaption>Infraestrutura</figcaption>
-            </figure>
-            <figure>
-              <img class="img-portfolio" src="./img/servidores.png" alt="Imagem de Gerenciamento de Servidores">
-              <figcaption>Gerenciamento de Servidores</figcaption>
-            </figure>
-            <figure>
-              <img class="img-portfolio" src="./img/programador.png" alt="Imagem de Desenvolvedor">
-              <figcaption>Desenvolvedor(Em breve)</figcaption>
-            </figure>
+            <h2><a name="Portfolio">Portfólio</a></h2>
+            <span>
+              <figure>
+                <img class="img-portfolio" src="./img/consultor.jpg" alt="Imagem de Consultor">
+                <figcaption>Consultor</figcaption>
+              </figure>
+              <figure>
+                <img class="img-portfolio" src="./img/infra.png" alt="Imagem de Infraestrutura">
+                <figcaption>Infraestrutura</figcaption>
+              </figure>
+              <figure>
+                <img class="img-portfolio" src="./img/servidores.png" alt="Imagem de Gerenciamento de Servidores">
+                <figcaption>Gerenciamento de Servidores</figcaption>
+              </figure>
+              <figure>
+                <img class="img-portfolio" src="./img/programador.png" alt="Imagem de Desenvolvedor">
+                <figcaption>Desenvolvedor <a>(Em breve)</a></figcaption>
+                </figure>
+              </span>
           </section>
         </main>
         <footer>
+          <nav class="rodape">
+            <h2><a name="Contato">Contato</a></h2>
+            <ul>
+              <li><a href="#">Email: alysson.santos@outlook.com</a></li>
+              <li><a href="#">Whatsapp: (85) 98942-1521</a></li>
+              <li><a href="#">GitHun</a></li>
+            </ul>
+          </nav>
 
         </footer>
 
