--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen" /> 
+        <!--<link rel="stylesheet" type="text/css" href="css/estilos2.css" media="screen" /> -->
     </head>
     <body>
         <header>
@@ -18,7 +19,7 @@
                 <li><a href="#Contato">Contato</a></li>
               </ul>
             </nav>
-            <div>
+            <div class="apresentacao">
               <img src="./img/perfil.jpg" alt="Foto de perfil" id="perfil">
               <h1 class="site-title">Alysson Alves</h1>
               <h2 class="site-subtitle">Especialista em Adm. e Segurança</h2>
@@ -27,12 +28,12 @@
         </header>
         <main>
           <article >
-            <h2><a name="Sobre">Sobre</a></h2>
+            <h2><a name="Sobre"></a>Sobre</h2>
             <p>Sou o Alysson dos Santos Alves, tenho 24 anos e sou Graduado em Redes de computadores(2014-2017) com Especialização em Administração e Segurança de Servidores(2018-2020). Sempre procurando novas tecnologias e conhecimento, nesse momento com o foco no mundo de desenvolvimento</p>
           </article>
           <section>
             <h2><a name="Portfolio">Portfólio</a></h2>
-            <span>
+            <div class="grid">
               <figure>
                 <img class="img-portfolio" src="./img/consultor.jpg" alt="Imagem de Consultor">
                 <figcaption>Consultor</figcaption>
@@ -49,7 +50,7 @@
                 <img class="img-portfolio" src="./img/programador.png" alt="Imagem de Desenvolvedor">
                 <figcaption>Desenvolvedor <a>(Em breve)</a></figcaption>
                 </figure>
-              </span>
+            </div>
           </section>
         </main>
         <footer>
