--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
 
+        <!--Link CSS-->
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen" /> 
         <!--<link rel="stylesheet" type="text/css" href="css/estilos2.css" media="screen" /> -->
+
+        <!--Link Icones-->
+        <script src="https://kit.fontawesome.com/6d6952c5be.js" crossorigin="anonymous"></script>
+
     </head>
     <body>
         <header><a name="Sobre"></a>
@@ -53,14 +58,13 @@
         </main>
         <footer>
           <nav class="rodape">
-            <h2><a name="Contato">Contato</a></h2>
             <ul>
-              <li><p>Email: alysson.santos@outlook.com</p></li>
-              <li><a href="https://api.whatsapp.com/send?phone=5585989421521">Whatsapp: (85) 98942-1521</a></li>
-              <li><a href="https://github.com/alyssonalvesdev/">GitHun</a></li>
+              <li><a href="mailto:alysson.santos@outlook.com"><i class="far fa-envelope-open"></i></a></li>
+              <li><a href="https://api.whatsapp.com/send?phone=5585989421521"><i class="fab fa-whatsapp"></i></a></li>
+              <li><a href="https://github.com/alyssonalvesdev/"><i class="fab fa-github"></i></a></li>
             </ul>
+            <div><h5>© Copyright 2020 Alysson Alves. Todos os direitos reservados.</h5></div>
           </nav>
-
         </footer>
 
         <!-- script java -->
