--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </section>
           </div>          
           <section id="portfolio" class="portfolio">
-            <h2>Portfólio</h2>
+            <h2>Conhecimento</h2>
             <div class="grid">
               <figure>
                 <img class="img-portfolio" src="./img/consultor.jpg" alt="Imagem de Consultor">
